Archive2/af/ba06cbdd884587/output
main.cpp:5:3: error: stray ‘#’ in program
 };#include <iostream>
   ^
main.cpp:5:4: error: ‘include’ does not name a type
 };#include <iostream>
    ^
main.cpp: In function ‘int main(int, char**)’:
main.cpp:8:14: error: ‘printf’ was not declared in this scope
 printf("%d",5);
              ^
