Archive2/af/ba06cbdd884587/main.cpp
template <class blabla>
struct NewClassName
{
    // ...
};#include <iostream>
using namespace std;
int main(int argc, char *argv[]) {
printf("%d",5);
}